# BasicLogger

./: .gitignore  CMakeLists.txt  README.md
include/BasicLogger/: BasicLogger.hpp
